--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center_vertical"
-    android:paddingLeft="15dp"
-    android:paddingRight="15dp"
+    android:padding="15dp"
     tools:context=".MainActivity">
 
     <LinearLayout
