--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="15dp"
-    android:background="@drawable/star_b_s"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -64,6 +63,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="invisible"
         android:text="추천인 닉네임" />
 
     <EditText
@@ -71,6 +71,7 @@
         android:layout_height="wrap_content"
         android:hint="검색 기능 예시"
         android:singleLine="true"
+        android:visibility="gone"
         android:imeOptions="actionSearch"/>
 
     <RadioGroup
@@ -90,6 +91,7 @@
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:enabled="false"
             android:text="공개안함" />
 
     </RadioGroup>
